# Game-Stream-Trends

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task-ticket-template.md
.github/workflows/: python-lint.yaml
dev/airflow/: .dockerignore  Dockerfile  README.md  docker-compose.yaml
dev/airflow/dags/steam/: steam_bronze_4hourly.py  steam_bronze_daily.py  steam_silver_4hourly.py  steam_silver_daily.py
dev/airflow/dags/twitch/: twitch_bronze_4hourly.py  twitch_silver_4hourly.py
dev/airflow/scripts/ingestion/steam/: fetch_discounts.py
dev/airflow/scripts/steam/: fetch_reviewmetas.py  steam_fetch_config.py
dev/airflow/scripts/twitch/: fetch_streams.py  twitch_fetch_config.py
dev/lib/: config.py  minio_utils.py
dev/minio/: .dockerignore  README.md  docker-compose.yaml  nginx.conf  nginx.conf.template
dev/minio/scripts/: host_minio_test.py
dev/minio/test-scripts/: client_minio_test.py  host_minio_test.py
dev/scripts/ingestion/steam/: fetch_discounts.py
docs/: git-guidelines.md
