[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Game-Stream-Trends"
version = "0.1.0"
description = "Combine game data and streaming platform data to track the latest trends in gaming and streaming."
packages = [
    { include = "test-scripts", from = "dev/minio" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "2.10.4"
python-dotenv = "1.0.1"
minio = "7.2.15"
requests = "2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.0.0"
black = "22.3.0"
flake8 = "3.9.2"
isort = "^5.0.0"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]
