[metadata]
name = Game-Stream-Trends
version = 0.1.0
description = "Combine game data and streaming platform data to track the latest trends in gaming and streaming."

[options]
packages = find:
python_requires = >=3.11

[options.extras_require]
dev =
    pre-commit
    black==22.3.0
    flake8==3.9.2
    isort